Fix fullscreen icon z-index
Close issue #101

--- a/source/css/diva.less
+++ b/source/css/diva.less
@@ -157,7 +157,7 @@
 
 .diva-fullscreen-icon {
     position: absolute;
-    z-index: 8999;
+    z-index: 99;
     top: 0;
     left: 0;
     width: 40px;
